# kingdom

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  .shellcheckrc  .vault_pass  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GEMINI.md  INSTRUCTIONS.md  README.adoc  Taskfile.yml  build-check.txt  build.docker.sh  commitlint.config.js  devbox.json  docker-compose.yml  flake.nix  kdctl-install.sh  package-lock.json  package.json  report.md  run.sh  test.sh
.ansible/: deploy.yml  inventory.ini
.ansible/vars/: app_values.yml  secrets.yml
.claude/: SKILLS.md
.claude/commands/: ai-log.md  critique.md  report.md  rigorous-critique.md
.codex/: SKILLS.md
.codex/commands/: ai-log.md
.githooks/: commit-msg
.github/workflows/: build.yml  ci.yml  commit-lint.yml  docker-release.yml  release.yml  tests.yml  version.yml
ansible/: configure-host.yml  configure-nginx-proxy.yml  deploy.yml  inventory.ini  port-forward.yml  reset-port-forwarding.yml
ansible/vars/: app_values.yml  secrets.example.yml  secrets.yml
blockchain/: .env.example  MessageIntegrity.abi.json  hardhat.config.js  package.json
blockchain/contracts/: MessageIntegrity.sol
blockchain/scripts/: deploy.js
blockchain/sidecar/: index.js  package.json
blockchain/test/: MessageIntegrity.test.js
blockchain/verification/: index.html
certs/: ca.crt  ca.srl  server.crt
cmake/: check-nix-linkage.sh  dependencies.cmake
config/: build.shell.nix
docs/: ai-log.md  docker_dns_issue.md  openapi.yaml  qt-gui.md  spec.adoc  tasks.md  tls-changes.md  tls-testing.md  tls.md  weekendtasks.md
docs/ai-log/: fionn.md  mikey.md
docs/misc/: qt-gui.md
docs/misc-issues/: docker-closure-size.md  docker_dns_issue.md  nix-reading-flake-sources.md
docs/reports/: cicd.md  cover.md  crypto.md  network.md  pentest.md
docs/spec/: spec.adoc
docs/spec/qualitative-tests/: submission-requirements.md
frontend/: app.js  index.html  style.css
kdctl/: CMakeLists.txt
kdctl/src/: LoginWindow.cc  LoginWindow.hh  MainWindow.cc  MainWindow.hh  main.cc
kds/: CMakeLists.txt
kds/src/: Server.cc  Server.hh  main.cc
kds/src/common/: Constants.hh  version.h.in
kds/src/controller/: Controller.cc  Controller.hh  configure.cc
kds/src/db/: Database.cc  Database.hh  UserRow.hh
kds/src/security/: JwtUtils.hh  SecurityError.hh  SecurityFilterChain.cc  SecurityFilterChain.hh  SecurityPredicate.hh  SecurityPredicateFactory.cc  SecurityPredicateFactory.hh  SecurityPredicates.hh
kds/tests/: SecurityTests.cc
libkd/: CMakeLists.txt
libkd/include/kd/: Client.hpp  Conversation.hpp  LocalKeyStore.hpp  Message.hpp  MessageStore.hpp  User.hpp
libkd/src/: Client.cc  Conversation.cc  LocalKeyStore.cc  Message.cc  MessageStore.cc  User.cc
nix/: build.nix
scripts/: README.md  build.docker.sh  build.sh  ci.sh  create-closure.sh  create-toolchain-closure.sh  delete-gha-cache-chunks.sh  dependenchy-report.sh  deploy.sh  health-check.sh  health.sh  hello-log.sh  init-certs.sh  init.sh  kdctl-install.sh  kds-debug.sh  lint.sh  move-store.sh  run-kds-dev.sh  run.docker.sh  sbom.sh  setup-gha-secrets.sh  shellcheck.sh  source-dep-report.sh  start.sh  static-analysis.sh  teardown-env.sh  test.sh  unpack-closure.sh  unpack-store.sh  verify-env.sh  write-env.sh
scripts/certs/: server.crt  server.key
scripts/init/: configure-nix-host.sh  init.sh
src/: main.cc
tests/: e2e-flow.test.ts  flake.nix  package-lock.json  package.json  vitest.config.ts
